# cat-scale

./: LICENSE  README.md
.github/workflows/: dotnet.yml
dotnet/: .gitignore  CatScale.sln
dotnet/CatScale.Application/: CatScale.Application.csproj
dotnet/CatScale.Application/Exceptions/: DomainException.cs  EntityNotFoundException.cs
dotnet/CatScale.Application/Repository/: IRepository.cs  IUnitOfWork.cs
dotnet/CatScale.Application/Services/: ClassificationService.cs  NotificationService.cs
dotnet/CatScale.Domain/Enums/: CatDetails.cs  ToiletDetails.cs
dotnet/CatScale.Service/: CatScale.Service.csproj  CatScale.Service.service  Notes.txt  Program.cs  WeatherForecast.cs  appsettings.Development.json  appsettings.Testing.json  appsettings.json
dotnet/CatScale.Service.Model/: CatScale.Service.Model.csproj
dotnet/CatScale.UI.BlazorServer/: CatScale.UI.BlazorServer.csproj  CatScale.UI.BlazorServer.service  Program.cs  _Imports.razor  appsettings.json
dotnet/CatScale.UI.BlazorWasm/: CatScale.UI.BlazorWasm.csproj  Program.cs  _Imports.razor
esp32/: .gitignore
esp32/cat_scale/: CMakeLists.txt  build_and_update.sh  sdkconfig
esp32/cat_scale/main/: CMakeLists.txt  Kconfig.projbuild  bme280_user.c  bme280_user.h  ccs811.c  ccs811.h  filter_cascade.c  filter_cascade.h  filters.c  filters.h  http.c  http.h  hx711.c  hx711.h  log_udp.c  log_udp.h  main.c  measurement.c  measurement.h  rc.c  rc.h  ringbuffer.c  ringbuffer.h  sensors.c  sensors.h  time.c  time.h  wifi.c  wifi.h
scripts/: .gitignore  deploy_to_vserver.sh  publish_dotnet.sh
(+210 files in other folders)
